

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kotlin.ui.FallDetectionActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lav_recognition"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="walking.json"
        app:lottie_loop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="70dp"
        android:layout_height="70dp"


        app:layout_constraintBottom_toTopOf="@+id/chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:lottie_autoPlay="true"
        app:lottie_fileName="health_heart.json"
        app:lottie_loop="true" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.923" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/googlesans_bold"
        android:text="@string/mediscal_is_tracking_your_movements"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lottieAnimationView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/gradient_curved_background"
        android:drawableTop="@drawable/ic_footsteps_silhouette_variant"
        android:drawablePadding="8dp"
        android:fontFamily="@font/googlesans_bold"
        android:padding="10dp"
        android:text="@string/steps"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.773" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:layout_marginTop="32dp"
        android:onClick="clickEventSOS"
        android:background="@drawable/gradient_curved_background"
        android:drawableTop="@drawable/ic_baseline_notifications_active_24"
        android:drawablePadding="17dp"
        android:fontFamily="@font/googlesans_bold"
        android:padding="10dp"
        android:text="@string/SOS"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/gradient_curved_background"
        android:drawableTop="@drawable/ic_baseline_local_hospital_24"
        android:drawablePadding="8dp"
        android:fontFamily="@font/googlesans_bold"
        android:padding="10dp"
        android:text="@string/hospitals"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:onClick="clickEventFindNearestHospital"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.773" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="clickEventWeatherActivity"
        app:srcCompat="@drawable/sun" />


</androidx.constraintlayout.widget.ConstraintLayout>